--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Open Sans", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Roboto Slab", sans-serif;
+}
+
+h2,
+h3 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+h2[id="header"],
+h3[id="header"] {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.headerstitle {
+  font-family: "Raleway", sans-serif;
+  font-size: 80%;
+}
+
+a.black-link {
+  color: black;
+}
+a.black-link:visited {
+  color: black;
+}
+
+a {
+  color: #4caf50;
+}
+a:visited {
+  color: #396b3b;
+}
+
+.heading {
+  font-weight: 700;
+}
+.subheading {
+  font-weight: 300;
 }
